[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://src/ui/hud.gd" id="1"]

[node name="HUD" type="PanelContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
script = ExtResource("1")

[node name="HBox" type="HBoxContainer" parent="."]
theme_override_constants/separation = 24

[node name="MoneyLabel" type="Label" parent="HBox"]
unique_name_in_owner = true
theme_override_font_sizes/font_size = 20
text = "$0"

[node name="ReputationLabel" type="Label" parent="HBox"]
unique_name_in_owner = true
theme_override_font_sizes/font_size = 20
text = "Rep: 0"

[node name="AiLabel" type="Label" parent="HBox"]
unique_name_in_owner = true
theme_override_colors/font_color = Color(0.4, 0.7, 0.9, 1)
theme_override_font_sizes/font_size = 14

[node name="TeamLabel" type="Label" parent="HBox"]
unique_name_in_owner = true
theme_override_colors/font_color = Color(0.7, 0.6, 0.4, 1)
theme_override_font_sizes/font_size = 14

[node name="StuckLabel" type="Label" parent="HBox"]
unique_name_in_owner = true
theme_override_colors/font_color = Color(0.9, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 14

[node name="TaskLabel" type="Label" parent="HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2
